[package]
authors = ["Richard Cook"]
categories = ["filesystem"]
description = "Metadirectory repositories"
edition = "2021"
homepage = "https://github.com/rcook/joat-repo-rs"
keywords = ["general"]
license = "MIT"
name = "joat-repo"
repository = "https://github.com/rcook/joat-repo-rs"
version = "0.0.9"

[features]
example-bin = ["clap", "color-backtrace", "colored", "home", "log"]

[[bin]]
name = "joat-repo-example-bin"
path = "src/bin/main.rs"
required-features = ["example-bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"], optional = true }
color-backtrace = { version = "0.5.1", optional = true }
colored = { version = "2.0.4", optional = true }
fslock = "0.2.1"
home = { version = "0.5.5", optional = true }
joatmon = "0.0.31"
log = { version = "0.4.19", optional = true }
md5 = "0.7.0"
path-absolutize = "3.1.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_yaml = "0.9.22"
thiserror = "1.0.43"
uuid = { version = "1.4.0", features = ["v4", "serde"] }

[dev-dependencies]
rstest = "0.18.1"
tempdir = "0.3.7"
