[package]
authors = ["Richard Cook"]
categories = ["filesystem"]
description = "Metadirectory repositories"
edition = "2021"
homepage = "https://github.com/rcook/joat-repo-rs"
keywords = ["general"]
license = "MIT"
name = "joat-repo"
readme = "README.md"
repository = "https://github.com/rcook/joat-repo-rs.git"
version = "0.0.10"

[features]
example-bin = ["clap", "color-backtrace", "colored", "home", "log"]

[[bin]]
name = "joat-repo-example-bin"
path = "src/bin/main.rs"
required-features = ["example-bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.4", features = ["derive"], optional = true }
color-backtrace = { version = "0.6.0", optional = true }
colored = { version = "2.0.4", optional = true }
fslock = "0.2.1"
home = { version = "0.5.5", optional = true }
joatmon = "0.0.33"
log = { version = "0.4.20", optional = true }
md5 = "0.7.0"
path-absolutize = "3.1.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.48"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
rstest = "0.18.2"
tempdir = "0.3.7"
